--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -4,6 +4,8 @@ name: builddocker
 on:
   push:
     branches: master
+    tags:
+      - "*.*.*"
 
 jobs:
   buildx:
@@ -11,6 +13,18 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          # list of Docker images to use as base name for tags
+          images: ankicommunity/anki-sync-server-rs
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+           
 
        # https://github.com/docker/setup-qemu-action
       - name: Set up QEMU
@@ -33,4 +47,4 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ankicommunity/anki-sync-server-rs:latest
+          tags: ${{ steps.meta.outputs.tags }}
