--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,46 +3,26 @@ on: [pull_request]
 name: Continuous integration
 
 jobs:
-  ci:
-    strategy:
-      fail-fast: false
-      matrix:
-        platform: [macos-latest, ubuntu-latest]
-        style: [all, default, minimal]
-        rust:
-          - stable
-        
-        include:
-          - style: all
-            flags: '--all-features'
-          - style: default
-            flags: ''
-          - style: minimal
-            flags: '--no-default-features'
-        exclude:
-          - platform: ubuntu-latest
-            style: default
-          - platform: macos-latest
-            style: minimal
-
-    runs-on: ${{ matrix.platform }}
+  ci_linux:
+    name: ci_on_linux
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out code
+        uses: actions/checkout@v2
 
-      - name: Setup Rust toolchain
+      - name: Set up cargo
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: ${{ matrix.rust }}
+          toolchain: stable
           override: true
-          components: rustfmt, clippy
-
+          
       - name: Install Protoc
         uses: arduino/setup-protoc@v1
         with:
           version: '3.x'
-
+      
       - name: Set up python
         uses: actions/setup-python@v2
 
@@ -54,11 +34,49 @@ jobs:
       - name: run pre-commit
         uses: pre-commit/action@v2.0.3
      
+      # run build script to build
       - name: Build Ankisyncd
-        uses: actions-rs/cargo@v1
+        run: |
+          cargo build 
+          cargo build --features tls
+
+  ci_macos:
+    name: ci_on_macos
+    runs-on: macos-latest
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Set up cargo
+        uses: actions-rs/toolchain@v1
         with:
-          command: build
-          args: ${{ matrix.flags }}
+          profile: minimal
+          toolchain: stable
+          override: true
+          
+      - name: Install protoc
+        run: |
+          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+          brew install protobuf
+      
+      - name: Set up python
+        uses: actions/setup-python@v2
+
+      # clone and patch anki library  
+      - name: Clone patch Anki
+        run: sh ./scripts/clone_patch_anki
+          
+      # set up and run pre-commit pre-commit run --all-files
+      - name: run pre-commit
+        uses: pre-commit/action@v2.0.3
+     
+      # run build script to build
+      - name: Build Ankisyncd
+        run: |
+          cargo build 
+          cargo build --features tls
+
 
   # it is necessary to separate windows ,as patch file differ  
   ci_windows:
