--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ toml = "0.5"
 async-trait = "0.1.58"
 zip = { version = "0.6.2", default-features = false, features = ["deflate", "time"] }
 unicode-normalization = "0.1.22"
+lazy_static = "1.4.0"
 
 [dependencies.rustls]
 optional = true
