--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   buildx:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
