--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -11,7 +11,7 @@ jobs:
   buildx:
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: true
+      fail-fast: false
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
