--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -34,6 +34,8 @@ jobs:
       # https://github.com/docker/setup-buildx-action
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          config: .github/buildkitd.toml
   
       -
         name: Login to DockerHub
@@ -43,9 +45,8 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       -
         name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
-          config: .github/buildkitd.toml
           context: .
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64
