--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -11,12 +11,57 @@ jobs:
   buildx:
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
+      matrix:
+        target: [x86_64-unknown-linux-gnu, aarch64-unknown-linux-gnu]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      -
-        name: Docker meta
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-${{ matrix.target }}-cargo
+
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: ${{ matrix.target }}
+          override: true
+
+      # clone and patch anki library  
+      - name: Clone patch Anki
+        run: sh ./scripts/clone_patch_anki
+        
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v1
+        with:
+          version: '3.9.1'
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: actions-rs/cargo@v1
+        with:
+          use-cross: true
+          command: build
+          args: --release --target ${{ matrix.target }} 
+      
+      - run: mv target/${{ matrix.target }}/release/ankisyncd ${{ matrix.target }}-ankisyncd
+      
+      - uses: actions/upload-artifact@v2
+        with:
+          name: binary
+          path: ${{ matrix.target }}-ankisyncd
+          retention-days: 1
+
+  docker:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+  
+      - name: Docker meta
         id: meta
         uses: docker/metadata-action@v4
         with:
@@ -34,8 +79,6 @@ jobs:
       # https://github.com/docker/setup-buildx-action
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        with:
-          config: .github/buildkitd.toml
   
       -
         name: Login to DockerHub
@@ -43,12 +86,20 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: binary
+          path: binary
+
       -
         name: Build and push
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile
+          file: .github/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
