--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -145,18 +145,18 @@ jobs:
       - name: unpack cross-compile toolchains musl
         run: tar -zxvf $HOME/aarch64-linux-musl-cross.tgz -C $HOME
       # # openssl
-      # - uses: robinraju/release-downloader@v1.4
-      #   with:
-      #     repository: "dobefore/cross-compile-openssl-musl"
-      #     tag: "1.1.1"
-      #     fileName: "openssl1.1.1f_1.1.1_linux_armv6.tar.gz"
-      # - name: Copy openssl lib to home
-      #   run: cp openssl1.1.1f_1.1.1_linux_armv6.tar.gz $HOME
+      - uses: robinraju/release-downloader@v1.4
+        with:
+          repository: "dobefore/cross-compile-openssl-musl"
+          tag: "1.1.1"
+          fileName: "openssl1.1.1f_1.1.1_linux_arm64.tar.gz"
+      - name: Copy openssl lib to home
+        run: cp openssl1.1.1f_1.1.1_linux_arm64.tar.gz $HOME
 
-      # - name: unpack  openssl 
-      #   run: |
-      #     tar -zxvf $HOME/openssl1.1.1f_1.1.1_linux_armv6.tar.gz -C $HOME
-      #     cp -r $HOME/openssl1.1.1f_1.1.1_linux_armv6/openssl/ $HOME
+      - name: unpack  openssl 
+        run: |
+          tar -zxvf $HOME/openssl1.1.1f_1.1.1_linux_arm64.tar.gz -C $HOME
+          cp -r $HOME/openssl1.1.1f_1.1.1_linux_arm64/openssl/ $HOME
       # sqlite3
       - uses: robinraju/release-downloader@v1.4
         with:
@@ -174,11 +174,13 @@ jobs:
           cp -r sqliteautoconf3390000_0.1.2_linux_arm64/sql/ .
   
       # build static-linked binary for armv6 (also suitable for aarch64)
-      # export SQLITE3_LIB_DIR=$HOME/sql/lib
-          # export SQLITE3_INCLUDE_DIR=$HOME/sql/include
-          # export SQLITE3_STATIC=1
+          
       - name: Build 
         run: | 
+          export SQLITE3_LIB_DIR=$HOME/sql/lib
+          export SQLITE3_INCLUDE_DIR=$HOME/sql/include
+          export SQLITE3_STATIC=1
+          
           export PATH="$HOME/aarch64-linux-musl-cross/bin:$PATH"
           cargo build --target aarch64-unknown-linux-musl --release 
   
