--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -42,20 +42,6 @@ jobs:
       #     mkdir -p $HOME/protoc
       #     unzip protoc-3.15.8-linux-x86_64.zip -d $HOME/protoc
           
-      - name: Add cargo taget x86_64
-        run: rustup target add x86_64-unknown-linux-musl
-
-      - uses: robinraju/release-downloader@v1.4
-        with:
-          repository: "dobefore/musl-cross"
-          tag: "0.1.0"
-          fileName: "x86_64-linux-musl-cross.tgz"
-
-      - name: Copy musl-cross to home
-        run: cp  x86_64-linux-musl-cross.tgz $HOME
-
-      - name: unpack cross-compile toolchains musl
-        run: tar -zxvf $HOME/x86_64-linux-musl-cross.tgz -C $HOME
       # # openssl
       # - uses: robinraju/release-downloader@v1.4
       #   with:
@@ -83,10 +69,9 @@ jobs:
   
       - name: Build 
         run: | 
-          export PATH="$HOME/x86_64-linux-musl-cross/bin:$PATH"
-          cargo build --target x86_64-unknown-linux-musl --release 
+          cargo build  --release 
       
-      - run: mv target/x86_64-unknown-linux-musl/release/ankisyncd x86_64-unknown-linux-musl-ankisyncd
+      - run: mv target/release/ankisyncd x86_64-unknown-linux-musl-ankisyncd
       
       - uses: actions/upload-artifact@v2
         with:
