--- a/.cargo/config
+++ b/.cargo/config
@@ -32,7 +32,7 @@ linker = "arm-linux-musleabihf-ld"
  ]
 
 [target.x86_64-unknown-linux-musl]
-linker = "x86_64-linux-musl-gcc"
+linker = "x86_64-linux-musl-ld"
 rustflags = ["-C", "target-feature=+crt-static",
  "-C", "link-args=-static",
  ]
