--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
         uses: arduino/setup-protoc@v1
         with:
           version: '3.x'
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Set up python
         uses: actions/setup-python@v2
@@ -97,7 +98,8 @@ jobs:
       - name: Install Protoc
         uses: arduino/setup-protoc@v1
         with:
-          version: '3.x' 
+          version: '3.x'
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       
       # clone and patch anki library  
       - name: Clone patch Anki
