catch up with new anki protocol use official media sync protocol create a new anki patch

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ankisyncd"
-version = "0.2.7"
+version = "1.0.0"
 edition = "2021"
 license = "AGPL-3.0-or-later"
 # documentation = "https://docs.rs/ankisyncd/"
@@ -18,7 +18,7 @@ account=[]
 
 [dependencies]
 thiserror = "1.0.37"
-actix-web = "4.2.1" 
+actix-web = "4.3.0" 
 actix-multipart = "0.4.0"
 async-std = "1.12.0"
 futures-util = "0.3.25"
@@ -32,11 +32,13 @@ sha2 = "0.10.6"
 md5 = "0.7.0"
 urlparse = "0.7.3"
 hex = "0.4.3"
+# maybe specify some features below.
 anki = {path="anki/rslib"}
 clap ={version= "4.0.22",features = ["derive"]}
 toml = "0.5"
 async-trait = "0.1.58"
 zip = { version = "0.6.2", default-features = false, features = ["deflate", "time"] }
+zstd = { version = "0.12.2", features = ["zstdmt"] }
 unicode-normalization = "0.1.22"
 lazy_static = "1.4.0"
 log = "0.4"
